--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <!-- induce css -->
     <link rel="stylesheet" href="<%= BASE_URL %>css/common.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/iconfont/iconfont.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>libs/swiper-4.1.0.min.css">
+    <script src="<%= BASE_URL %>libs/swiper-4.1.0.min.js"></script>
     <title>movie1</title>
   </head>
   <body>
@@ -15,6 +17,7 @@
       <strong>We're sorry but movie1 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+      <div>哈哈网努力加载中ing……</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
